--- a/ios/LUCIDream/Info.plist
+++ b/ios/LUCIDream/Info.plist
@@ -53,5 +53,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Arial_Rounded_MT.ttf</string>
+	</array>
 </dict>
 </plist>
